classDiagram
    %% PawPal+ — pet care planning assistant
    %% Keep this updated so it matches your final implementation.
    %% Deferred for later (optional): Owner.preferences, Task.category,
    %% Task.fixed_time, ScheduledTask.start_time, Scheduler.pet

    class Pet {
        +str name
        +int age
        +str breed
        +str species
    }

    class Owner {
        +str name
        +int available_minutes
    }

    class Task {
        +str title
        +int duration
        +Priority priority
    }

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class ScheduledTask {
        +Task task
        +str reason
    }

    class Plan {
        +list~ScheduledTask~ scheduled
        +list~Task~ dropped
        +int total_minutes
        +explain() str
    }

    class Scheduler {
        +Owner owner
        +list~Task~ tasks
        +build_plan() Plan
        +sort_by_priority() list~Task~
    }

    Owner "1" --> "1" Pet : cares for
    Scheduler --> Owner : uses constraints
    Scheduler "1" --> "*" Task : schedules
    Scheduler ..> Plan : produces
    Plan "1" --> "*" ScheduledTask : contains
    ScheduledTask --> Task : wraps
    Task --> Priority : has
